[tool.poetry]
name = "learn-blockchain"
version = "0.1.0"
description = ""
authors = ["Brandon Thai Tran <xbrandonthaitran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
web3 = {extras = ["tester"], version = "^5.19.0"}
jupyterlab = "^3.0.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
